# Chief-AI

./: .gitignore  README.md  UPGRADE.md  demo_write_code.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: chief.md  design-brand.md  design-graphic.md  design-motion.md  design-ui.md  design-ux.md  devops-cloud.md  devops-docker.md  devops-k8s.md  devops-linux.md  devops-network.md  devops-security.md  doc-apidocs.md  doc-prd.md  doc-readme.md  doc-techwriting.md  eng-api.md  eng-backend.md  eng-data.md  eng-desktop.md  eng-frontend.md  eng-ml.md  eng-mobile.md  eng-system.md  exec-decision.md  exec-product.md  exec-startup.md  exec-strategy.md  finance-budgeting.md  finance-pricing.md  finance-revenue.md  finance-startup.md  legal-compliance.md  legal-license.md  legal-privacy.md  legal-terms.md  marketing-github.md  marketing-launch.md  marketing-linkedin.md  marketing-portfolio.md  (+16 more)
chief_ai/: __init__.py  cli.py  config.py  web.py
chief_ai/core/: __init__.py  chief.py  memory.py  registry.py  router.py  types.py
chief_ai/integrations/: __init__.py  opencode_generator.py  opencode_runner.py
demo_output/: Dockerfile  README.md  docker-compose.yml
demo_output/backend/: main.py
demo_output/docs/: LAUNCH_CHECKLIST.md  STRATEGY.md  openapi.yaml
demo_output/src/: App.tsx  styles.css
demo_output/tests/: test_api.py
src/appclis/: __init__.py  chen.py  chief.py
src/appclis/settings/: __init__.py  chen_settings.py  settings_manager.py
src/libagentic/: __init__.py  agents.py  keyring_store.py  logging.py  models.py  models_config.py  prompts.py  providers.py
src/libagentic/tools/: search.py  time.py
src/libchatinterface/: __init__.py  cli.py  costs.py  session.py
tests/: conftest.py  test_chief.py  test_generator.py  test_keyring_store.py  test_logging.py  test_models_config.py  test_providers.py  test_registry.py  test_router.py  test_web.py
