[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chief-ai"
version = "0.1.0"
description = "Chief AI - a single orchestrator that manages a team of specialized sub-agents, executed as opencode subagents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
chief = "chief_ai.cli:main"

[tool.setuptools.packages.find]
include = ["chief_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
