[project]
name = "chief-ai"
version = "0.2.1"
description = "AI agent framework with Chief and Chen, a conversational AI psychologist with web search and multi-provider support in your terminal."
authors = [
    { name = "Batista Harahap", email = "batista@bango29.com" }
]
license = {text = "MIT"}
keywords = ["ai", "agent", "anthropic", "openai", "openrouter", "chat", "assistant", "psychologist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic-ai>=1.0.1",
    "pydantic-settings>=2.10.1",
    "typer>=0.17.4",
    "tavily-python>=0.7.11",
    "asyncer>=0.0.8",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "uuid7>=0.1.0",
    "keyring>=25.0.0",
    "rich>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/YogendraChukka01/Chief-AI"
Repository = "https://github.com/YogendraChukka01/Chief-AI"
Issues = "https://github.com/YogendraChukka01/Chief-AI/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appclis", "src/libagentic", "src/libchatinterface"]

[project.scripts]
chief = "appclis.chief:app"
chen = "appclis.chen:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
